# pingpong-landing-prediction

./: .gitattributes  .gitignore  LIMITATIONS.md  README.md  requirements.txt  run_convergence.py  run_killer.py  run_miscalibration.py  run_mismatch.py  run_observability.py  run_prior.py  run_residual_flight.py  sanity.py  verify_review.py
gazebo/: README.md  results_board.md  results_board_ood.md  results_board_robustness.md  results_camera.md  results_camera_blur.md  results_closure.md  results_m2.md  results_sweep.md
gazebo/board_out/: board_dataset.csv
gazebo/cam_blur_out/: detections_back.csv  detections_side.csv  traj_cam.csv
gazebo/cam_out/: detections_back.csv  detections_side.csv  landing.csv  traj.csv  traj_cam.csv
gazebo/models/pingpong_ball/: model.config  (+1 more)
gazebo/plugins/aero_launch/: AeroLaunch.cc  AeroLaunch.hh  CMakeLists.txt
gazebo/scripts/: board_learn.py  board_ood.py  board_robustness.py  calibrate_bounce.py  camera_predict.py  camera_track.py  closure_check.py  learn_board_residual.py  predict_from_csv.py  predict_second_bounce.py  record_landing.py  run.sh  run_camera.sh  sweep.py
gazebo/sweep_out/: manifest.csv  sweep_summary.csv
gazebo/worlds/: table_tennis.sdf  table_tennis_board.sdf  table_tennis_cam.sdf  table_tennis_cam_blur.sdf
real/: README.md  detections.csv  exit_test.py  results_exit_test.md
results/: convergence.txt  miscalibration.txt  mismatch.txt  observability.txt  prior.txt  residual_flight.txt  summary.txt
ttsim/: __init__.py  bounce.py  estimators.py  experiment.py  noise.py  physics.py  physics_rich.py
(+34 files in other folders)
